test/corpus/basic.txt
==============================
Imports, functions, calls
==============================
from bootstrap_io import read_text_file, text_length

def read_source(path: str) -> str:
    let source = read_text_file(path)
    return source

def main():
    let source = read_source("compiler.dm")
    print(text_length(source))

---

(source_file
  (top_level_item
    (from_import
      module: (module_name
        (identifier))
      names: (import_name
        (identifier))
      names: (import_name
        (identifier))
      (newline)))
  (newline)
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier))))
        (rparen))
      return_type: (type
        (type_atom
          (identifier)))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (lparen)
                  (expression
                    (identifier))
                  (rparen))))
            (newline)))
        (statement
          (return_statement
            value: (expression
              (identifier))
            (newline)))
        (statement
          (newline)))
      (dedent)))
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (rparen))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (lparen)
                  (expression
                    (string))
                  (rparen))))
            (newline)))
        (statement
          (print_statement
            (lparen)
            argument: (expression
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (lparen)
                  (expression
                    (identifier))
                  (rparen))))
            (rparen)
            (newline))))
      (dedent))))

==============================
Operators and chained postfix expressions
==============================
def evaluate(value: int):
    let chained = value.strip().length()
    let powered = -2 ** 3
    let quotient = 7 // 2
    let bits = 5 & 3 | 1 ^ 2
    let shifted = 1 << 4
    let unary = +~value
    print(chained + powered + quotient + bits + shifted + unary)

---

(source_file
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier))))
        (rparen))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (field_expression
                  object: (call_expression
                    function: (enum_variant_expression
                      enum: (identifier)
                      variant: (identifier))
                    arguments: (arguments
                      (lparen)
                      (rparen)))
                  field: (identifier))
                arguments: (arguments
                  (lparen)
                  (rparen))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (unary_expression
                argument: (expression
                  (binary_expression
                    (expression
                      (integer))
                    (expression
                      (integer))))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (binary_expression
                (expression
                  (integer))
                (expression
                  (integer))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (integer))
                    (expression
                      (integer))))
                (expression
                  (binary_expression
                    (expression
                      (integer))
                    (expression
                      (integer))))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (binary_expression
                (expression
                  (integer))
                (expression
                  (integer))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (unary_expression
                argument: (expression
                  (unary_expression
                    argument: (expression
                      (identifier))))))
            (newline)))
        (statement
          (print_statement
            (lparen)
            argument: (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (binary_expression
                        (expression
                          (binary_expression
                            (expression
                              (binary_expression
                                (expression
                                  (identifier))
                                (expression
                                  (identifier))))
                            (expression
                              (identifier))))
                        (expression
                          (identifier))))
                    (expression
                      (identifier))))
                (expression
                  (identifier))))
            (rparen)
            (newline))))
      (dedent))))

==============================
Reference parser coverage
==============================
struct Embedded:
    Printable
    values: [int]

def make_values(value: str):
    const local_value: str = 'x'
    let some_value = Some(value)
    let none_value = None
    let ok_value = Ok(1)
    let err_value = Err(2)
    return some_value

---

(source_file
  (top_level_item
    (struct_definition
      name: (identifier)
      (newline)
      (indent)
      body: (struct_member_block
        (struct_member
          (embedded_field
            type: (type
              (type_atom
                (identifier)))
            (newline)))
        (struct_member
          (field_definition
            name: (identifier)
            type: (type
              (type_atom
                (lbracket)
                (type
                  (type_atom
                    (identifier)))
                (rbracket)))
            (newline)))
        (struct_member
          (newline)))
      (dedent)))
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier))))
        (rparen))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (constant_definition
            name: (identifier)
            type: (type
              (type_atom
                (identifier)))
            value: (expression
              (rune))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (enum_variant_expression)
                arguments: (arguments
                  (lparen)
                  (expression
                    (identifier))
                  (rparen))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (enum_variant_expression))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (enum_variant_expression)
                arguments: (arguments
                  (lparen)
                  (expression
                    (integer))
                  (rparen))))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (call_expression
                function: (enum_variant_expression)
                arguments: (arguments
                  (lparen)
                  (expression
                    (integer))
                  (rparen))))
            (newline)))
        (statement
          (return_statement
            value: (expression
              (identifier))
            (newline))))
      (dedent))))

==============================
Constants, bounds and lambdas
==============================
const TOKEN_EOF: int = 0

interface Printable:
    def print(self)

def print_any[T: Printable](item: T):
    let increment = lambda (value: int) -> value + 1
    print(increment(item))

---

(source_file
  (top_level_item
    (constant_definition
      name: (identifier)
      type: (type
        (type_atom
          (identifier)))
      value: (expression
        (integer))
      (newline)))
  (newline)
  (top_level_item
    (interface_definition
      name: (identifier)
      (newline)
      (indent)
      body: (interface_member_block
        (interface_member
          (interface_method
            name: (identifier)
            parameters: (parameters
              (lparen)
              (parameter)
              (rparen))
            (newline)))
        (interface_member
          (newline)))
      (dedent)))
  (top_level_item
    (function_definition
      name: (identifier)
      (type_parameters
        (lbracket)
        (bounded_type_parameter
          name: (identifier)
          bound: (type
            (type_atom
              (identifier))))
        (rbracket))
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier))))
        (rparen))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (lambda_expression
                parameters: (parameters
                  (lparen)
                  (parameter
                    name: (identifier)
                    type: (type
                      (type_atom
                        (identifier))))
                  (rparen))
                body: (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer))))))
            (newline)))
        (statement
          (print_statement
            (lparen)
            argument: (expression
              (call_expression
                function: (identifier)
                arguments: (arguments
                  (lparen)
                  (expression
                    (identifier))
                  (rparen))))
            (rparen)
            (newline))))
      (dedent))))

==============================
Declarations, patterns and expressions
==============================
from types import Vec2 as Point

struct Vec2[T]:
    x: T
    y: T

    def get_x(self) -> T:
        '''返回 x 坐标'''
        return self.x

interface Add[T]:
    type Item = T
    def add(self, other: T) -> T

impl Add[int] for Vec2[int]:
    def add(self, other: int) -> int:
        pass

enum Result[T]:
    Ok(T)
    Err(str)

def convert(value: Result[int]) -> int | str:
    let items = [1, 2, 3]
    let first = items[0:2]
    let data = {"value": first}
    return match value:
        Ok(number) if number > 0:
            number
        Err(message): message

---

(source_file
  (top_level_item
    (from_import
      module: (module_name
        (identifier))
      names: (import_name
        (identifier)
        (identifier))
      (newline)))
  (newline)
  (top_level_item
    (struct_definition
      name: (identifier)
      (type_parameters
        (lbracket)
        (identifier)
        (rbracket))
      (newline)
      (indent)
      body: (struct_member_block
        (struct_member
          (field_definition
            name: (identifier)
            type: (type
              (type_atom
                (identifier)))
            (newline)))
        (struct_member
          (field_definition
            name: (identifier)
            type: (type
              (type_atom
                (identifier)))
            (newline)))
        (struct_member
          (newline))
        (struct_member
          (function_definition
            name: (identifier)
            parameters: (parameters
              (lparen)
              (parameter)
              (rparen))
            return_type: (type
              (type_atom
                (identifier)))
            (newline)
            (indent)
            body: (statement_block
              (statement
                (expression_statement
                  (expression
                    (triple_string))
                  (newline)))
              (statement
                (return_statement
                  value: (expression
                    (field_expression
                      object: (self_expression)
                      field: (identifier)))
                  (newline)))
              (statement
                (newline)))
            (dedent))))
      (dedent)))
  (top_level_item
    (interface_definition
      name: (identifier)
      (type_parameters
        (lbracket)
        (identifier)
        (rbracket))
      (newline)
      (indent)
      body: (interface_member_block
        (interface_member
          (associated_type
            name: (identifier)
            value: (type
              (type_atom
                (identifier)))
            (newline)))
        (interface_member
          (interface_method
            name: (identifier)
            parameters: (parameters
              (lparen)
              (parameter)
              (parameter
                name: (identifier)
                type: (type
                  (type_atom
                    (identifier))))
              (rparen))
            return_type: (type
              (type_atom
                (identifier)))
            (newline)))
        (interface_member
          (newline)))
      (dedent)))
  (top_level_item
    (impl_definition
      interface: (identifier)
      (type_arguments
        (lbracket)
        (type
          (type_atom
            (identifier)))
        (rbracket))
      target: (type
        (type_atom
          (identifier)
          (lbracket)
          (type
            (type_atom
              (identifier)))
          (rbracket)))
      (newline)
      (indent)
      body: (impl_member_block
        (impl_member
          (function_definition
            name: (identifier)
            parameters: (parameters
              (lparen)
              (parameter)
              (parameter
                name: (identifier)
                type: (type
                  (type_atom
                    (identifier))))
              (rparen))
            return_type: (type
              (type_atom
                (identifier)))
            (newline)
            (indent)
            body: (statement_block
              (statement
                (expression_statement
                  (expression
                    (identifier))
                  (newline)))
              (statement
                (newline)))
            (dedent))))
      (dedent)))
  (top_level_item
    (enum_definition
      name: (identifier)
      (type_parameters
        (lbracket)
        (identifier)
        (rbracket))
      (newline)
      (indent)
      body: (enum_member_block
        (enum_member_variant
          (lparen)
          types: (type
            (type_atom
              (identifier)))
          (rparen)
          (newline))
        (enum_member_variant
          (lparen)
          types: (type
            (type_atom
              (identifier)))
          (rparen)
          (newline)))
      (newline)
      (dedent)))
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier)
              (lbracket)
              (type
                (type_atom
                  (identifier)))
              (rbracket))))
        (rparen))
      return_type: (type
        (type_atom
          (identifier))
        (type_atom
          (identifier)))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (list_expression
                (lbracket)
                (expression
                  (integer))
                (expression
                  (integer))
                (expression
                  (integer))
                (rbracket)))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (index_expression
                object: (identifier)
                (lbracket)
                index: (slice
                  (expression
                    (integer))
                  (expression
                    (integer)))
                (rbracket)))
            (newline)))
        (statement
          (let_statement
            name: (pattern
              (identifier))
            value: (expression
              (dict_expression
                (lbrace)
                (dict_pair
                  (expression
                    (string))
                  (expression
                    (identifier)))
                (rbrace)))
            (newline)))
        (statement
          (return_statement
            value: (match_expression
              value: (expression
                (identifier))
              (newline)
              (indent)
              cases: (match_case
                pattern: (match_pattern
                  (enum_pattern
                    (lparen)
                    (match_pattern
                      (identifier))
                    (rparen)))
                guard: (expression
                  (binary_expression
                    (expression
                      (identifier))
                    (expression
                      (integer))))
                (newline)
                (indent)
                body: (statement
                  (expression_statement
                    (expression
                      (identifier))
                    (newline)))
                (dedent))
              cases: (match_case
                pattern: (match_pattern
                  (enum_pattern
                    (lparen)
                    (match_pattern
                      (identifier))
                    (rparen)))
                expression: (expression
                  (identifier))
                (newline))
              (dedent)))))
      (dedent))))

==============================
Nested control flow
==============================
def classify(value: int) -> int:
    if value > 10:
        return value
    elif value == 10:
        return 0
    else:
        while value < 10:
            let value = value + 1
        return value

---

(source_file
  (top_level_item
    (function_definition
      name: (identifier)
      parameters: (parameters
        (lparen)
        (parameter
          name: (identifier)
          type: (type
            (type_atom
              (identifier))))
        (rparen))
      return_type: (type
        (type_atom
          (identifier)))
      (newline)
      (indent)
      body: (statement_block
        (statement
          (if_statement
            condition: (expression
              (binary_expression
                (expression
                  (identifier))
                (expression
                  (integer))))
            (newline)
            (indent)
            consequence: (statement
              (return_statement
                value: (expression
                  (identifier))
                (newline)))
            (dedent)
            (elif_clause
              condition: (expression
                (binary_expression
                  (expression
                    (identifier))
                  (expression
                    (integer))))
              (newline)
              (indent)
              body: (statement
                (return_statement
                  value: (expression
                    (integer))
                  (newline)))
              (dedent))
            (else_clause
              (newline)
              (indent)
              body: (statement
                (while_statement
                  condition: (expression
                    (binary_expression
                      (expression
                        (identifier))
                      (expression
                        (integer))))
                  (newline)
                  (indent)
                  body: (statement
                    (let_statement
                      name: (pattern
                        (identifier))
                      value: (expression
                        (binary_expression
                          (expression
                            (identifier))
                          (expression
                            (integer))))
                      (newline)))
                  (dedent)))
              body: (statement
                (return_statement
                  value: (expression
                    (identifier))
                  (newline)))
              (dedent)))))
      (dedent))))
